--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>vavr</artifactId>
             <version>0.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin.ui</groupId>
+            <artifactId>numberfield</artifactId>
+            <version>0.2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -92,4 +97,10 @@
     </build>
 
 
+    <repositories>
+        <repository>
+            <id>vaadin-addons</id>
+            <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+    </repositories>
 </project>
